Fixed transer label spacing

--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -65,6 +65,8 @@
 }
 
 .list-item__recipient {
+    word-break: break-all;
+    width: 100px;
     display: flex;
     justify-content: space-between;
     font-size: $font-size-small;
